# parseltongue

./: .claude.md  .cursorignore  .gitignore  .trustedKiroCommands  2025-11-01-i-fundamentally-think-that-we-should-have-a-folder.txt  2025-11-06-ultrathink-use-agent-parseltongue-ultrathink-isg.txt  2025-11-14-ultrahink-run-the-parseltongue-on-the-current-code.txt  2025-11-15-use-agent-parseltongue-ultrathink-isg-explorer-to.txt  2025-11-18-use-agent-parseltongue-ultrathink-isg-explorer-ou.txt  ALL_EXTRACTED_METADATA_DICTIONARY.md  BACKLOG-CHALLENGES.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CLEANUP-AND-TEST-SUMMARY.md  CLI_IMPLEMENTATION_SUMMARY.md  CONTEXT_WINDOW_EXECUTIVE_SUMMARY.md  CPU-BASED-ANALYSIS-INTEGRATION-PLAN.md  Cargo.toml  Challenge01-ISGSize.md  Challenge02-Rust-Analyzer-LSP.md  Challenge03-Canonical-Variable-List.md  CozoDbQueryRef.md  D01-keywords-list.md  DOCUMENTATION_ISSUES_REPORT.md  Docs-PT02-Commands-202511020276.md  END_TO_END_WORKFLOW_VALIDATION_SUMMARY.md  EXECUTIVE-SUMMARY.md  FIRST_TIME_USER_EXPERIENCE_TASKS.md  GRAPH_LEXER_PLAN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_NOTES.md  ISG_ANALYTICS_RESEARCH.md  Ideation for Compilers 20251117.md  LICENSE  MegaISG20251110.md  PARSELTONGUE_CORE_PRD_ANALYSIS.md  PARSELTONGUE_PROJECT_TOC.md  PLATFORM-DETECTION-ENHANCEMENT.md  PT07_RESEARCH_SUMMARY.md  (+96 more)
crates/folder-to-cozoDB-streamer/: Cargo.toml
crates/folder-to-cozoDB-streamer/src/: performance.rs
crates/folder-to-cozoDB-streamer/tests/: core_types_tests.rs
crates/folder-to-cozodb-streamer/: Cargo.toml
crates/folder-to-cozodb-streamer/src/: cli.rs  isgl1_generator.rs  lib.rs  lsp_client.rs  main.rs  streamer.rs  streamer_lsp_tests.rs
crates/folder-to-cozodb-streamer/tests/: tdd_classification_test.rs  verify_lsp_storage.rs
crates/llm-cozodb-to-code-writer/: Cargo.toml  README.md
crates/llm-cozodb-to-code-writer/src/: errors.rs  lib.rs  writer.rs
crates/llm-cozodb-to-diff-writer/: Cargo.toml
crates/llm-cozodb-to-diff-writer/src/: cli.rs  diff_generator.rs  diff_types.rs  lib.rs  main.rs
crates/llm-cozodb-to-diff-writer/tests/: demo_5_line_change.rs  diff_generator_tests.rs  integration_tests.rs
crates/parseltongue/: Cargo.toml
crates/parseltongue-01/: Cargo.toml
crates/parseltongue-01/src/: cli.rs  errors.rs  lib.rs  main.rs  streamer.rs
crates/parseltongue-01/tests/: performance_tests.rs
crates/parseltongue-02/: Cargo.toml
crates/parseltongue-02/src/: chunking.rs  cli.rs  discovery.rs  error.rs  errors.rs  lib.rs  llm_client.rs  main.rs  parser.rs  storage.rs  streamer.rs  temporal_writer.rs
crates/parseltongue-03/: Cargo.toml
crates/parseltongue-03/src/: cli.rs  graph_analyzer.rs  lib.rs  llm_client.rs  main.rs  reasoning_engine.rs  simulation_plan.rs  sorcerer.rs
crates/parseltongue-03/tests/: tool2_comprehensive_tests.rs
crates/parseltongue-05/: CHANGELOG.md  Cargo.toml
crates/parseltongue-05/src/: backup.rs  lib.rs  main.rs  safety.rs  tool3_integration.rs  types.rs  writer.rs
crates/parseltongue-05/tests/: end_to_end_test.rs  integration_tests.rs  red_phase_tests.rs
crates/parseltongue-06/: Cargo.toml  README.md
crates/parseltongue-06/src/: cli.rs  lib.rs  main.rs  metadata_backup.rs  state_reset.rs
crates/parseltongue-core/: Cargo.toml
crates/parseltongue-core/src/: entities.rs  entity_class_specifications.rs  error.rs  interfaces.rs  lib.rs  query_extractor.rs  temporal.rs
crates/parseltongue-core/tests/: cozo_storage_integration_tests.rs  end_to_end_workflow.rs  pt02_level00_zero_dependencies_test.rs  query_based_extraction_test.rs  query_json_graph_contract_tests.rs  swift_integration_test.rs  swift_protocol_query_test.rs  swift_query_debug.rs  tool2_temporal_operations.rs
crates/parseltongue-e2e-tests/: Cargo.toml
crates/parseltongue-e2e-tests/tests/: complete_workflow_test.rs  orchestrator_workflow_test.rs
crates/parseltongue/src/: main.rs
crates/pt02-llm-cozodb-to-context-writer/: Cargo.toml  test.json  test.toon
crates/pt02-llm-cozodb-to-context-writer/parseltongue20251114190936/: test.json
crates/pt02-llm-cozodb-to-context-writer/parseltongue20251114192227/: test.json  test.toon
crates/pt02-llm-cozodb-to-context-writer/src/: cli.rs  context_optimizer.rs  cozodb_adapter.rs  export_trait.rs  lib.rs  llm_client.rs  main.rs  models.rs  query_builder.rs  toon_encoder.rs
crates/pt02-llm-cozodb-to-context-writer/tests/: dual_file_export_specifications.rs  include_current_code_tests.rs  integration_tests.rs  level0_tests.rs  level1_tests.rs  level2_tests.rs  toon_token_efficiency_test.rs
crates/pt03-llm-to-cozodb-writer/: Cargo.toml
crates/pt03-llm-to-cozodb-writer/src/: lib.rs  main.rs
crates/pt03-llm-to-cozodb-writer/tests/: cli_integration.rs  simple_interface_tests.rs
crates/pt04-syntax-preflight-validator/: Cargo.toml
crates/pt04-syntax-preflight-validator/src/: lib.rs  main.rs  simple_validator.rs
crates/pt04-syntax-preflight-validator/tests/: simple_syntax_validation_tests.rs
crates/pt06-cozodb-make-future-code-current/: Cargo.toml
crates/pt06-cozodb-make-future-code-current/src/: main.rs  state_reset.rs
crates/pt07-visual-analytics-terminal/: Cargo.toml
crates/rust-preflight-code-simulator/: Cargo.toml
huffelpuff/: Cargo.toml
huffelpuff/huffelpuff_db/: db  snap.000000000023BAA3  snap.00000000005D3BB6
huffelpuff/learningLogs/: combined_output.txt  review20241024.txt
huffelpuff/src/: main.rs
huffelpuff/txtReference/: approach1.txt  avoidRustBugs.txt  debugDirective.txt
mvp01/: Cargo.toml  build.rs
mvp01/proto/: summary.proto
mvp01/src/: cli.rs  code_analysis.rs  database.rs  logging.rs  main.rs  output.rs  summary.proto  zip_processing.rs
mvp01/tests/: integration_test.rs
mvp01/txtReferences/: actions1.txt  approach01.txt  avoidRustBugs.txt  backlog.txt  expectedBehavior.txt  prd.txt  previousApproachNotes.txt  promptLog20241021v1.txt
phase01/: Cargo.toml  step01_scope.txt  step02_modules.txt  step02_modules_detailed.txt  step03_avoidObviousBugs.txt  step99_log_prompts.txt
phase01/src/: lib.rs  main.rs
phase01/src/cli/: args.rs  mod.rs  (+2 more)
(+1324 files in other folders)
