[package]
name = "huffelpuff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
zip = "0.6.6"
sled = "0.34.7"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
log = "0.4.19"
env_logger = "0.10.0"
chrono = "0.4.26"
indicatif = "0.17.5"
regex = "1.9.1"

[dev-dependencies]
tempfile = "3.7.0"
