[package]
name = "huffelpuff"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4.19"
env_logger = "0.10.0"

# Error handling
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4.3", features = ["derive"] }

# ZIP file processing
zip = "0.6.6"

# Database
sled = "0.34.7"

# Serialization/Deserialization
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"

# Date and time
chrono = "0.4.26"

# Progress bar
indicatif = "0.17.5"

# Regular expressions
regex = "1.9.1"

# Text encoding
encoding_rs = "0.8.32"

# Compression
flate2 = "1.0.26"

# Colored console output
colored = "2.0.4"

[dev-dependencies]
tempfile = "3.7.0"
