[package]
name = "oss_code_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
sled = "0.34"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
chrono = "0.4"
colored = "2.0"
moka = { version = "0.12", features = ["sync"] }
thiserror = "1.0"
prost = "0.11"

[build-dependencies]
prost-build = "0.11"

[[bin]]
name = "oss_code_analyzer"
path = "src/main.rs"
