[package]
name = "oss_code_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
colored = "2.0"
prost = "0.11"
sled = "0.34"
moka = "0.9"

[build-dependencies]
prost-build = "0.11"

[[bin]]
name = "oss_code_analyzer"
path = "src/main.rs"

[features]
proto = []
