# ===== Level 4 (Top): Project Metadata =====
[package]
name = "parseltongue"
version = "0.1.0"
edition = "2021"
authors = ["amuldotexe <https://twitter.com/amuldotexe>"]
description = "ZIP file analysis and storage tool"
license = "MIT"

# ===== Level 3: Feature Configuration =====
[features]
default = ["metrics", "tracing"]
metrics = ["metrics-runtime", "metrics-util"]
tracing = ["tracing-core", "tracing-subscriber"]

# ===== Level 2: Dependencies by Category =====
[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Data Processing
bytes = "1.5"
zip = { version = "0.6", features = ["deflate", "time"] }
encoding_rs = "0.8"
crc32fast = "1.3"

# Storage
sled = "0.34"
bincode = "1.3"

# CLI & Progress
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Metrics (Optional)
metrics-runtime = { version = "0.21", optional = true }
metrics-util = { version = "0.15", optional = true }
tracing-core = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
console-subscriber = "0.2"

# Time & Serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tempfile = "3.10"

# ===== Level 1: Development Dependencies =====
[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4.0"
test-log = "0.2.14"
rand = "0.8.5"
