# ===== Level 4 (Top): Project Metadata =====
[package]
name = "phase01"
version = "0.1.0"
edition = "2021"
authors = ["amuldotexe <https://twitter.com/amuldotexe>"]
description = "ZIP file analysis and storage tool"
license = "MIT"

# ===== Level 3: Feature Configuration =====
[features]
default = ["metrics", "tracing"]
metrics = ["dep:metrics", "dep:metrics-util"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

# ===== Level 2: Dependencies by Category =====
[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
tokio-console = "0.1"
futures = "0.3"
async-trait = "0.1"

# Data Processing
bytes = "1.5"
zip = { version = "0.6", features = ["deflate", "time"] }
encoding_rs = "0.8"
chardetng = "0.1"
crc32fast = "1.3"

# Storage
sled = "0.34"
bincode = "1.3"

# CLI & Progress
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Metrics
metrics = { version = "0.13", optional = true }
metrics-util = { version = "0.13", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# System Info & Time
sys-info = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
num_cpus = "1.15"
tempfile = "3.10"

# ===== Level 1: Development Dependencies =====
[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
test-log = "0.2"
rand = "0.8"
