# ===== Level 4 (Top): Project Metadata =====
[package]
name = "parseltongue"
version = "0.1.0"
edition = "2021"
authors = ["amuldotexe"]
description = "A Tokio-based ZIP file analyzer and storage system"

# ===== Level 3: Feature Configuration =====
[features]
default = ["metrics", "tracing"]
metrics = ["dep:metrics", "dep:metrics-util"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

# ===== Level 2: Dependencies by Category =====
[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# Storage
sled = "0.34"

# ZIP Processing
zip = "0.6"
bytes = "1.0"
encoding_rs = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.1"
indicatif = "0.17"

# Utilities
futures = "0.3"
chrono = "0.4"
num_cpus = "1.0"

# ===== Level 1: Development Dependencies =====
[dev-dependencies]
tempfile = "3.0"
rand = "0.8"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "zip_processing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"

[profile.dev.package."*"]
opt-level = 2

[workspace]
members = [
    ".",
    "benches",
]
