[package]
name = "folder-to-cozoDB-streamer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"  # For property-based testing
tempfile = "3.0"  # For testing RAII patterns

[dev-dependencies]
tokio-test = "0.4"