[package]
name = "folder-to-cozodb-streamer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

# Parsing dependencies
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

# Storage dependencies
cozo = { workspace = true }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
console.workspace = true
indicatif.workspace = true
walkdir = "2.0"
async-trait.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
async-trait.workspace = true

[[bin]]
name = "folder-to-cozodb-streamer"
path = "src/main.rs"

[lib]
name = "folder_to_cozodb_streamer"
path = "src/lib.rs"