[package]
name = "llm-cozodb-to-diff-writer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CodeDiff.json generator for Parseltongue - generates diff context from CozoDB for LLM consumption"
keywords = ["diff-generator", "cozodb", "ultra-minimalist", "parseltongue"]
categories = ["development-tools"]

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
console.workspace = true
indicatif.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio-test.workspace = true

[[bin]]
name = "llm-cozodb-to-diff-writer"
path = "src/main.rs"

[lib]
name = "llm_cozodb_to_diff_writer"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
