[package]
name = "parseltongue-02"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
parseltongue-01 = { path = "../parseltongue-01" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
miette = "5.10"
eyre = "0.6"

# Parsing dependencies
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }

# Storage dependencies
cozo = { workspace = true }
rayon = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }

# File system dependencies
walkdir = "2.0"
ignore = "0.4"

# Time dependencies
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
proptest = { workspace = true }