[package]
name = "parseltongue-03"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"

# Parseltongue core dependencies
parseltongue-01 = { path = "../parseltongue-01" }

# LLM integration dependencies
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Graph processing dependencies
petgraph = "0.6"

# Statistical analysis dependencies
statrs = "0.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Debugging and logging dependencies
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
proptest.workspace = true