[package]
name = "parseltongue-05"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"

# Parseltongue core dependencies
parseltongue-01 = { path = "../parseltongue-01" }
parseltongue-03 = { path = "../parseltongue-03" }
parseltongue-04 = { path = "../parseltongue-04" }

# File system and temporary resources
tempfile = "3.0"
walkdir = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Process management and command execution
tokio-process = "0.2"

# Logging and debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for operation tracking
uuid = { version = "1.0", features = ["v4", "serde"] }

# File system operations
fs_extra = "1.3"
ignore = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
proptest.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }