[package]
name = "parseltongue-06"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
parseltongue-01 = { path = "../parseltongue-01" }
parseltongue-02 = { path = "../parseltongue-02" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

# CLI dependencies
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }

# File system dependencies
walkdir = "2.0"
stdext = "0.3"

# Time dependencies
chrono = { version = "0.4", features = ["serde"] }

# Error handling
miette = "5.10"

[[bin]]
name = "cozoDB-make-future-code-current"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"