[package]
name = "parseltongue-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
url = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Parsing dependencies
tree-sitter.workspace = true

# Storage dependencies
cozo.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio-test.workspace = true

[features]
default = []
test-utils = []