[package]
name = "parseltongue-e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
folder-to-cozodb-streamer = { path = "../folder-to-cozodb-streamer" }
llm-to-cozodb-writer = { path = "../llm-to-cozodb-writer" }
llm-cozodb-to-context-writer = { path = "../llm-cozodb-to-context-writer" }
rust-preflight-code-simulator = { path = "../rust-preflight-code-simulator" }
llm-cozodb-to-diff-writer = { path = "../llm-cozodb-to-diff-writer" }
cozodb-make-future-code-current = { path = "../cozodb-make-future-code-current" }

# Dependencies from workspace
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true

# Testing dependencies
tempfile.workspace = true
syn.workspace = true

[dev-dependencies]
tokio-test.workspace = true
