[package]
name = "pt02-llm-cozodb-to-context-writer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

# LLM communication dependencies
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Storage dependencies
cozo = { workspace = true }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
console.workspace = true
indicatif.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Context optimization dependencies
rayon = "1.7"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
async-trait.workspace = true

[[bin]]
name = "pt02-llm-cozodb-to-context-writer"
path = "src/main.rs"

[lib]
name = "pt02_llm_cozodb_to_context_writer"
path = "src/lib.rs"