[package]
name = "pt04-syntax-preflight-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Multi-language syntax validation - tree-sitter-based preflight validation for Parseltongue"
keywords = ["validation", "syntax", "preflight", "parseltongue", "multi-language"]
categories = ["development-tools"]

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
console.workspace = true
indicatif.workspace = true
async-trait.workspace = true

# Validation dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
tempfile.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter for simplified syntax validation
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
async-trait.workspace = true

[[bin]]
name = "pt04-syntax-preflight-validator"
path = "src/main.rs"

[lib]
name = "pt04_syntax_preflight_validator"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
