[package]
name = "pt06-cozodb-make-future-code-current"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "State reset manager for Parseltongue - ultra-minimalist CodeGraph reset"
keywords = ["state-reset", "cozodb", "ultra-minimalist", "parseltongue"]
categories = ["development-tools"]

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
console.workspace = true
async-trait.workspace = true

# Tool 1 integration for re-indexing (binary only)
pt01-folder-to-cozodb-streamer = { path = "../pt01-folder-to-cozodb-streamer" }

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true

[[bin]]
name = "pt06-cozodb-make-future-code-current"
path = "src/main.rs"

[lib]
name = "pt06_cozodb_make_future_code_current"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
