[package]
name = "pt07-visual-analytics-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
parseltongue-core = { path = "../parseltongue-core" }
pt02-llm-cozodb-to-context-writer = { path = "../pt02-llm-cozodb-to-context-writer" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
console = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "pt07_visual_analytics_terminal"
path = "src/lib.rs"
