[package]
name = "rust-preflight-code-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"

# Parseltongue core dependencies
folder-to-cozoDB-streamer = { path = "../folder-to-cozoDB-streamer" }
cozo-to-context-writer = { path = "../cozo-to-context-writer" }

# Rust analyzer integration (using simpler versions for GREEN phase)
# ra_ap_syntax = "0.0.180"
# ra_ap_text_edit = "0.0.180"

# Cargo integration for project management
cargo_metadata = "0.18"
toml = "0.8"

# File system and temporary resources
tempfile = "3.0"
walkdir = "2.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Process management and command execution
tokio-process = "0.2"

# Logging and debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional dependencies for GREEN phase implementation
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
proptest.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

