[package]
name = "rust-preflight-code-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Rust preflight code validation - syntax, build, and test validation for Parseltongue"
keywords = ["validation", "rust-analyzer", "preflight", "parseltongue"]
categories = ["development-tools"]

[dependencies]
# Core dependencies
parseltongue-core = { path = "../parseltongue-core" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
console.workspace = true
indicatif.workspace = true
async-trait.workspace = true

# Validation dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
tempfile.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter for simplified syntax validation
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
async-trait.workspace = true

[[bin]]
name = "rust-preflight-code-simulator"
path = "src/main.rs"

[lib]
name = "rust_preflight_code_simulator"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
